crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__little_wildcard_shared_failure_one.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype choice = Stop | Zero | One int | Two int int\nchoose : choice -> int\nchoose subject =\n    case trace \"subject\" subject of\n        Stop -> 1\n        _ -> trace \"fallback\" fail\nmain = choose (One 2)\n"
---
--- core
let message#17 : string = "subject" in
let message#18 : string = "fallback" in
let fromInt#4 : int -> int = \value#15 : int -> value#15 in
let fromString#6 : string -> string = \value#16 : string -> value#16 in
let choose#2 : Main.choice -> int = \subject#5 : Main.choice -> let match#7 : Main.choice = trace (fromString#6 message#17) in subject#5 in
let leaf#11 : 'erased = delay (trace (fromString#6 message#18) in error) in
case@Tag match#7 of
  0 -> fromInt#4 1
  1 -> force leaf#11
  2 field#12 -> force leaf#11
  3 field#13 field#14 -> force leaf#11 in
let main#1 : int = choose#2 ((\field#3 : int -> constr 2 field#3) (fromInt#4 2)) in
main#1
--- uplc
(program 1.1.0
  [(lam message_17
    [(lam message_18
      [(lam fromInt_4
        [(lam fromString_6
          [(lam choose_2
            [(lam main_1 main_1)
              [choose_2 [(lam field_3 (constr 2 field_3)) [fromInt_4 (con integer 2)]]]])
            (lam subject_5
              [(lam match_7
                [(lam leaf_11
                  (case
                    match_7
                    [fromInt_4 (con integer 1)]
                    (force leaf_11)
                    (lam field_12 (force leaf_11))
                    (lam field_13 (lam field_14 (force leaf_11)))))
                  (delay
                    (force [[(force (builtin trace)) [fromString_6 message_18]] (delay (error))]))])
                (force [[(force (builtin trace)) [fromString_6 message_17]] (delay subject_5)])])])
          (lam value_16 value_16)])
        (lam value_15 value_15)])
      (con string "fallback")])
    (con string "subject")])
--- result
error: ExplicitErrorTerm
--- logs
["subject", "fallback"]
--- budget
cpu: 119096, memory: 164
