crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__little_wildcard_shared_helper_receives_bound_values.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype choice = Stop | Zero | One int | Two int int\nchoose : (choice, int) -> int\nchoose subject =\n    case trace \"subject\" subject of\n        (Stop, _) -> 0\n        (_, value) -> trace \"shared\" value\nmain = (choose (Stop, 1), choose (Zero, 11), choose (One 2, 22), choose (Two 3 4, 33))\n"
---
--- core
let message#24 : string = "subject" in
let message#25 : string = "shared" in
let fromInt#3 : int -> int = \value#22 : int -> value#22 in
let fromString#8 : string -> string = \value#23 : string -> value#23 in
let choose#2 : (Main.choice, int) -> int = \subject#7 : (Main.choice, int) -> let match#10 : (Main.choice, int) = trace (fromString#8 message#24) in subject#7 in
let leaf#16 : 'erased = \value#9 : int -> trace (fromString#8 message#25) in value#9 in
case@Tag match#10 of
  0 field#17 field#18 -> case@Tag field#17 of
    0 -> fromInt#3 0
    1 -> let value#9 : int = field#18 in
    leaf#16 value#9
    2 field#19 -> let value#9 : int = field#18 in
    leaf#16 value#9
    3 field#20 field#21 -> let value#9 : int = field#18 in
    leaf#16 value#9 in
let main#1 : (int, int, int, int) = constr 0 (choose#2 (constr 0 (constr 0) (fromInt#3 1))) (choose#2 (constr 0 (constr 1) (fromInt#3 11))) (choose#2 (constr 0 ((\field#4 : int -> constr 2 field#4) (fromInt#3 2)) (fromInt#3 22))) (choose#2 (constr 0 ((\field#5 : int field#6 : int -> constr 3 field#5 field#6) (fromInt#3 3) (fromInt#3 4)) (fromInt#3 33))) in
main#1
--- uplc
(program 1.1.0
  [(lam message_24
    [(lam message_25
      [(lam fromInt_3
        [(lam fromString_8
          [(lam choose_2
            [(lam main_1 main_1)
              (constr 0
                [choose_2 (constr 0 (constr 0) [fromInt_3 (con integer 1)])]
                [choose_2 (constr 0 (constr 1) [fromInt_3 (con integer 11)])]
                [choose_2
                  (constr 0
                    [(lam field_4 (constr 2 field_4)) [fromInt_3 (con integer 2)]]
                    [fromInt_3 (con integer 22)])]
                [choose_2
                  (constr 0
                    [[(lam field_5 (lam field_6 (constr 3 field_5 field_6)))
                      [fromInt_3 (con integer 3)]]
                      [fromInt_3 (con integer 4)]]
                    [fromInt_3 (con integer 33)])])])
            (lam subject_7
              [(lam match_10
                [(lam leaf_16
                  (case
                    match_10
                    (lam field_17
                      (lam field_18
                        (case
                          field_17
                          [fromInt_3 (con integer 0)]
                          [(lam value_9 [leaf_16 value_9]) field_18]
                          (lam field_19 [(lam value_9 [leaf_16 value_9]) field_18])
                          (lam field_20 (lam field_21 [(lam value_9 [leaf_16 value_9]) field_18])))))))
                  (lam value_9
                    (force [[(force (builtin trace)) [fromString_8 message_25]] (delay value_9)]))])
                (force [[(force (builtin trace)) [fromString_8 message_24]] (delay subject_7)])])])
          (lam value_23 value_23)])
        (lam value_22 value_22)])
      (con string "shared")])
    (con string "subject")])
--- result
(constr 0 (con integer 0) (con integer 11) (con integer 22) (con integer 33))
--- logs
["subject", "subject", "shared", "subject", "shared", "subject", "shared"]
--- budget
cpu: 3904586, memory: 22124
